--- a/index.html
+++ b/index.html
@@ -1,45 +1,47 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>   
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="./assets/css/style.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home Page</title>
+<head>
+  <meta charset="utf-8">
+  <title>Insight</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <!--[if lt IE 9]>
+  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
 </head>
 
 <body>
-    <header class="header">
-        <div class="container">
-            <div class="logo"><img src="assets/images/logo.png" height="25" width="81" alt=""></div>
-            <div class="slogan">your nice slogan</div>
-            <nav>
-                    <ul class="nav">
-                    <li class="how-it-works"><a href="#">How it works</a></li>
-                    <li class="sign-up"><a href="#">Sign up</a></li>
-                    <li class="login"><a href="#">Login</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+	<header class="header">
+		<div class="container">
+			<div class="logo"><img src="./assets/images/logo.png" height="25" width="81" alt=""></div>
+			<div class="slogan">your nice slogan</div>
+			<nav>
+				<ul class="nav">
+					<li class="how-it-works"><a href="#">How it works</a></li>
+					<li class="sign-up"><a href="#">Sign up</a></li>
+					<li class="login"><a href="#">Login</a></li>
+				</ul>
+			</nav>
+		</div>
+	</header>
 
-    <div class="hero">
-        <div class="container">
-            <h1>Don't ignore your dreams</h1>
-            <p><strong>The 5 regrets</strong> paint a portrait of post-industrial man, who shrinks himself into a shape that fits his circumstances, then turns dutifully till he stops.</p>
-            <a href="#" class="btn btn-green">See how it works</a>
-            <a href="#" class="btn btn-blue">Join us</a>
-        </div>
-    </div>
+	<div class="hero">
+		<div class="container">
+			<h1>Don't ignore your dreams</h1>
+			<p><strong>The 5 regrets</strong> paint a portrait of post-industrial man, who shrinks himself into a shape that fits his circumstances, then turns dutifully till he stops.</p>
+			<a href="#" class="btn btn-green">See how it works</a>
+			<a href="#" class="btn btn-blue">Join us</a>
+		</div>
+	</div>
 
-    <main class="middle">
+	<main class="middle">
 		<div class="container">
 			<div class="blocks">
 				<div class="block">
 					<div class="image"><img src="./assets/images/hinh1.jpg" height="180" width="319" alt=""></div>
 					<div class="person">
-						<div class="photo"><img src="./assets/images/logo1.jpg" height="50" width="50" alt=""></div>
+						<div class="photo"><img src="./assets/images/h1.png" height="50" width="50" alt=""></div>
 						<div class="text">
 							<div class="phrase">You neglect your friends</div>
 							<div class="info">Valerie Adams. Moldova. 19.</div>
@@ -49,7 +51,7 @@
 				<div class="block">
 					<div class="image"><img src="./assets/images/hinh2.jpg" height="180" width="319" alt=""></div>
 					<div class="person">
-						<div class="photo"><img src="./assets/images/logo2.jpg" height="50" width="50" alt=""></div>
+						<div class="photo"><img src="./assets/images/h2.png" height="50" width="50" alt=""></div>
 						<div class="text">
 							<div class="phrase">You forget your dreams</div>
 							<div class="info">Robert. Italy. 38</div>
@@ -59,7 +61,7 @@
 				<div class="block">
 					<div class="image"><img src="./assets/images/hinh3.jpg" height="180" width="319" alt=""></div>
 					<div class="person">
-						<div class="photo"><img src="./assets/images/logo3.jpg" height="50" width="50" alt=""></div>
+						<div class="photo"><img src="./assets/images/h3.png" height="50" width="50" alt=""></div>
 						<div class="text">
 							<div class="phrase">You suppress your feelings</div>
 							<div class="info">Sergei. Italy. 38</div>
@@ -70,21 +72,21 @@
 
 			<div class="news">
 				<div class="one">
-					<div class="img"><a href="#"><img src="./assets/images/h1.png" height="89" width="89" alt=""></a></div>
+					<div class="img"><a href="#"><img src="./assets/images/logo1.jpg" height="89" width="89" alt=""></a></div>
 					<div class="text">
 						<time>Oct 18</time>
 						<p><a href="#">I would like to avoid making these mistakes.</a></p>
 					</div>
 				</div>
 				<div class="one">
-					<div class="img"><a href="#"><img src="./assets/images/h2.png" height="89" width="89" alt=""></a></div>
+					<div class="img"><a href="#"><img src="./assets/images/logo2.jpg" height="89" width="89" alt=""></a></div>
 					<div class="text">
 						<time>Oct 8</time>
 						<p><a href="#">But how do you avoid mistakes you make by default?</a></p>
 					</div>
 				</div>
 				<div class="one">
-					<div class="img"><a href="#"><img src="./assets/images/h3.png" height="89" width="89" alt=""></a></div>
+					<div class="img"><a href="#"><img src="./assets/images/logo3.jpg" height="89" width="89" alt=""></a></div>
 					<div class="text">
 						<time>Oct 2</time>
 						<p><a href="#">Ideally you transform your life so it has other defaults.</a></p>
@@ -105,65 +107,63 @@
 		</div>
 	</main>
 
-    <footer class="footer">
-        <div class="container">
-            <nav class="footer-nav">
-                <div class="column">
-                    <div class="title">MAIN</div>
-                    <ul>
-                        <li><a href="#">Start Here</a></li>
-                        <li><a href="#">Portfolio</a></li>
-                        <li><a href="#">Meet Us</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="column">
-                    <div class="title">COMPANY</div>
-                    <ul>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Help</a></li>
-                        <li><a href="#">Support</a></li>
-                        <li><a href="#">Jobs</a></li>
-                        <li><a href="#">Directory</a></li>
-                    </ul>
-                </div>
-                <div class="column">
-                    <div class="title">ONE MORE</div>
-                    <ul>
-                        <li><a href="#">Meetups</a></li>
-                        <li><a href="#">Handbook</a></li>
-                        <li><a href="#">Privacy</a></li>
-                        <li><a href="#">API</a></li>
-                        <li><a href="#">Equipment</a></li>
-                    </ul>
-                </div>
-                <div class="column">
-                    <div class="title">THE LAST ONE</div>
-                    <ul>
-                        <li><a href="#">Meetups</a></li>
-                        <li><a href="#">Handbook</a></li>
-                        <li><a href="#">Privacy</a></li>
-                        <li><a href="#">API</a></li>
-                        <li><a href="#">Equipment</a></li>
-                    </ul>
-                </div>
-                <ul class="pefect-icons">
-    
-                    <li><a href="#"><img src="assets/images/logotwitter.png" width="32" style="width: 27px;"></a>
-                    </li>
-                    <li><a href="#"><img src="assets/images/logofb.png" width="32" style="width: 14px;"></a></li>
-                    <li><a href="#"><img src="assets/images/logovimeo.png" width="32" style="width: 22px;"></a></li>              
-                </ul>
-                <div class="copyright">
-                    <p>© 2013 be happy<br>
-                        <a href="#">Privacy Policy</a> <a href="#">Terms of Service</a>
-                    </p>
-                </div>
-            </nav>
-        </div>
-        
-    </footer>
-    </body>
+	<footer class="footer">
+		<div class="container">
+			<nav class="footer-nav">
+				<div class="column">
+					<div class="title">MAIN</div>
+					<ul>
+						<li><a href="#">Start Here</a></li>
+						<li><a href="#">Portfolio</a></li>
+						<li><a href="#">Meet Us</a></li>
+						<li><a href="#">Blog</a></li>
+						<li><a href="#">Contact</a></li>
+					</ul>
+				</div>
+				<div class="column">
+					<div class="title">COMPANY</div>
+					<ul>
+						<li><a href="#">About</a></li>
+						<li><a href="#">Help</a></li>
+						<li><a href="#">Support</a></li>
+						<li><a href="#">Jobs</a></li>
+						<li><a href="#">Directory</a></li>
+					</ul>
+				</div>
+				<div class="column">
+					<div class="title">ONE MORE</div>
+					<ul>
+						<li><a href="#">Meetups</a></li>
+						<li><a href="#">Handbook</a></li>
+						<li><a href="#">Privacy</a></li>
+						<li><a href="#">API</a></li>
+						<li><a href="#">Equipment</a></li>
+					</ul>
+				</div>
+				<div class="column">
+					<div class="title">THE LAST ONE</div>
+					<ul>
+						<li><a href="#">Meetups</a></li>
+						<li><a href="#">Handbook</a></li>
+						<li><a href="#">Privacy</a></li>
+						<li><a href="#">API</a></li>
+						<li><a href="#">Equipment</a></li>
+					</ul>
+				</div>
+			</nav>
 
+			<ul class="soc">
+				<li><a class="soc-twitter" href="#"></a></li>
+				<li><a class="soc-facebook" href="#"></a></li>
+				<li><a class="soc-vimeo soc-icon-last" href="#"></a></li>
+			</ul>
+
+			<div class="copyright">
+				<p>© 2013 be happy<br>
+					<a href="#">Privacy Policy</a> <a href="#">Terms of Service</a>
+				</p>
+			</div>
+		</div>
+	</footer>
+</body>
 </html>
